#47 fix logstash configuration

--- a/Ficheros de configuración/logstashSensor.conf
+++ b/Ficheros de configuración/logstashSensor.conf
@@ -16,7 +16,7 @@ filter{
             }
 
         date {
-            match => ["[datetime]", "MM/dd/yy hh:mm:ss a"]
+            match => ["[datetime]", "dd/MM/yyyy HH:mm:ss"]
             target => "@timestamp"
         }
 }
