--- a/MonitorizacionIOT_1.0_all/etc/logstash/conf.d/logstashSensor.conf
+++ b/MonitorizacionIOT_1.0_all/etc/logstash/conf.d/logstashSensor.conf
@@ -19,9 +19,7 @@ filter{
 output{
 
         elasticsearch{
-                hosts => ["localhost:9200", "192.168.0.44:9200"]
+                hosts => ["localhost:9200", "IP_Ubuntu_server:9200"]
                 index => "sensor_data-%{+YYYY.MM.dd}"
         }
 }
-
-
